--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,23 @@ __pycache__/
 *.pyc
 .env
 
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
